# scitex-plt

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: cla.yml  docs.yml  publish-pypi.yml  test.yml
docs/sphinx/: conf.py
docs/sphinx/api/: scitex_plt.rst
src/scitex_plt/: __init__.py  __main__.py
src/scitex_plt/_skills/scitex-plt/: SKILL.md
src/scitex_plt/_sphinx_html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/scitex_plt/_sphinx_html/.doctrees/: environment.pickle  index.doctree  installation.doctree
src/scitex_plt/_sphinx_html/.doctrees/api/: scitex_plt.doctree
src/scitex_plt/_sphinx_html/_sources/: index.rst.txt  installation.rst.txt
src/scitex_plt/_sphinx_html/api/: scitex_plt.html
tests/scitex_plt/: test___main__.py
