[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-plt"
version = "0.24.2"
description = "SciTeX plotting module (alias for figrecipe)"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
authors = [
    { name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai" },
]
keywords = [
    "scitex",
    "matplotlib",
    "figrecipe",
    "plotting",
    "visualization",
    "scientific",
    "publication",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "figrecipe>=0.24.0",
]


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "scitex-plt[dev,docs]",
]

[project.scripts]
scitex-plt = "figrecipe._cli:main"

[project.entry-points."scitex_dev.docs"]
scitex-plt = "scitex_plt"

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-plt"
Documentation = "https://github.com/ywatanabe1989/figrecipe#readme"
Repository = "https://github.com/ywatanabe1989/scitex-plt.git"
Issues = "https://github.com/ywatanabe1989/figrecipe/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_plt"]
